prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/lex_errors/literal_overflow.nut
// EXPECT_ERROR: "constant overflow"
let x = 99999999999999999999999999999999999999999999
